[project]
name = "remotecar"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Nemeth"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
